--- a/_posts/2016-10-19-nos-sites.markdown
+++ b/_posts/2016-10-19-nos-sites.markdown
@@ -5,7 +5,7 @@ layout: page
 modal-id: 10
 date: 2016-10-19
 img: 10 Sites de pratique.jpg
-thumbnail: 10 Sites de pratique.jpg
+thumbnail: 10 Sites de pratique thumbnail.jpg
 category: projet
 comments: true
 ---
