Mise en forme pratiques

--- a/_posts/2016-10-24-nos-clubs.markdown
+++ b/_posts/2016-10-24-nos-clubs.markdown
@@ -42,7 +42,7 @@ permalink: nos-clubs
   - **Mieux identifier les besoins de nos structures** — prolonger les réflexions autour de la consultation nationale des clubs en associant les différentes instances et acteurs de la FFCK—.
   - **Réexaminer notre politique en matière de labéllisation :**
     - **Les rendre plus accessibles afin** que tous les clubs puissent entrer dans une démarche de qualité et développer le sentiment d’appartenance à notre fédération —ex: EFCK— .
-    - **Elargir le champ des mentions de nos labels** actuellement limitées à la performance. L’excellence peut être aussi recherchée dans d’autres domaines: loisir, sport santé. Faire le point de certaines tentatives—points kayak mer, points canoë nature.
+    - **Elargir le champ des mentions de nos labels** actuellement limitées à la performance. L’excellence peut être aussi recherchée dans d’autres domaines: loisir, sport santé. Faire le point sur certaines tentatives: points kayak mer, points canoë nature.
   - **Réexaminer notre politique tarifaire et nos services pour les membres agréés.**
   - **Réaffirmer auprès du ministère et des fédérations du nautisme, la nécessité pour toute structure proposant l’activité canoë-kayak d’être agréée ou affiliée à la FFCK.**
   - Envisager la création d’une **direction technique nationale adjointe en charge du développement et des territoires** pour l'opérationnalisation de ces orientations.
@@ -50,7 +50,7 @@ permalink: nos-clubs
     - **Les services aux clubs** : poursuivre le déploiement des services aux clubs. Centraliser les services qui peuvent l’être afin de réduire les coûts, alléger la charge de travail des CDCK, CRCK, et des clubs.
     - Développer l’**assistance à projet** qui doit s’appuyer sur le **trinôme SIÈGE-CRCK-CDCK** et sur une politique concertée :
       - Pour l’élaboration du projet de développement du club.
-      - Pour la réalisation de projets spécifiques— ex projet d’accueil de scolaires, développements des activités estivales etc. En complément d’EDEN-CLUB, développer des outils permettant aux clubs d’exprimer ces projets concrets souvent à court terme pour lesquels il souhaitent un accompagnement particulier –Politique d’appels à projets–.
+      - Pour la réalisation de projets spécifiques. Exemple: projet d’accueil de scolaires, développements des activités estivales etc. En complément d’EDEN-CLUB, développer des outils permettant aux clubs d’exprimer ces projets concrets souvent à court terme pour lesquels il souhaitent un accompagnement particulier –Politique d’appels à projets–.
   - **Soutenir la création de clubs et la création d’emploi au sein de nos clubs par des financements croisés** —SIÈGE-CRCK-CDCK-.
   - **Favoriser la création avec les CRCK et CDCK de FONDS DE DEVELOPPEMENT pour les clubs** —prêts sans intérêts sur fonds propres plafonnés, pour le financement des projets nécessitant des investissements lourds —remorques, flottille, camion, communication..— et adapter nos statuts en conséquence.
   - **Développer les outils favorisant le sponsoring et mécénat au service de nos structures** —clubs, CDCK, CRCK— Exemple: reconnaissance d’intérêt général permettant de recevoir des dons défiscalisés.
@@ -58,5 +58,5 @@ permalink: nos-clubs
   - **Optimiser nos frais de fonctionnement et réorienter une partie de nos moyens vers les clubs** afin de ne pas faire porter l’essentiel du financement de nos politiques sur nos clubs.
   - **Fournir aux clubs les outils** règlementaires, juridiques, marketing, pédagogiques etc. leur permettant
     - D’accueillir des scolaires
-    - De développer des activités de loisir et de tourisme Réaffirmer dans ce cadre la stratégie—1 pratiquant=1titre
-  - **Valoriser les clubs organisateurs** —site fédéral, AG, distinctions-.
+    - De développer des activités de loisir et de tourisme Réaffirmer dans ce cadre la stratégie "1 pratiquant = 1  titre"
+  - **Valoriser les clubs organisateurs**: site fédéral, AG, distinctions-.
