Mise à jour dtn

--- a/_posts/2016-11-05-faq-dtn.md
+++ b/_posts/2016-11-05-faq-dtn.md
@@ -1,6 +1,6 @@
 ---
-title: Comment choisit-on le DTN ?
-subtitle: Un processus partagé par la FFCK et le ministère.
+title: Comment le DTN est-il nommé ?
+subtitle: Un agent d’Etat placé par le Ministre après avis du président fédéral
 layout: page
 modal-id: faq-dtn
 date: 2016-11-05
@@ -14,16 +14,37 @@ side: 1
 
 ## Contexte
 
-Le DTN a un rôle important au sein d’une fédération. Il est placé sous la double autorité du ministère des sports et de la FFCK. Il est responsable notamment
+Les conditions de l’exercice de la mission de DTN sont prévues par les [articles L. 131-12 et R. 131-16 à R. 131-24 du code du sport](https://www.legifrance.gouv.fr/affichCode.do?idArticle=LEGIARTI000006547532&idSectionTA=LEGISCTA000006167035&cidTexte=LEGITEXT000006071318&dateTexte=20161105). Il en résulte notamment les éléments suivants :
 
-  - De l’ensemble des équipes de France et de la politique sportive de haut niveau,
-  - De la formation et du perfectionnement des cadres,
-  - De la coordination des actions entre leur fédération et les fédérations sportives affinitaires, le sport scolaire et universitaire et le sport militaire,
-  - De la cohérence des projets sportifs de la fédération avec les orientations du ministère des sports,
-  - De la nomination des entraîneurs nationaux (EN), des cadres techniques nationaux (CTN) et régionaux (CTR).
+  - Le DTN est un **agent d’Etat, placé par le Ministre auprès d’une fédération sportive agréée, après avis du président de cette fédération**. Cette notion « d’agent d’Etat placé auprès » fonde la spécificité du modèle français d’organisation sportive et conserve toute sa pertinence.
+  - La mission du DTN est de **concourir à la définition de la politique sportive fédérale**, de veiller à sa mise en œuvre et de contribuer à son évaluation. Le DTN dirige et anime la direction technique nationale de la fédération.
+  - Comme tous les conseillers techniques sportifs, le DTN exerce sa mission **dans les domaines du développement de la pratique sportive au sein des associations, de la détection des jeunes talents et du perfectionnement de l’élite, de la formation des cadres bénévoles et professionnels.**. Il est responsable notamment:
+    - De l’ensemble des équipes de France et de la politique sportive de haut niveau,
+    - De la formation et du perfectionnement des cadres,
+    - De la coordination des actions entre leur fédération et les fédérations sportives affinitaires, le sport scolaire et universitaire et le sport militaire,
+    - De la cohérence des projets sportifs de la fédération avec les orientations du ministère des sports,
+    - De la nomination des entraîneurs nationaux (EN), des cadres techniques nationaux (CTN) et régionaux (CTR).
+  - La **durée du mandat du DTN est de 4 ans**, celui-ci peut être renouvelé.
+  - La lettre de mission du DTN est établie par le directeur des sports, après avis de l’intéressé, **sur la base des propositions du président de la fédération.**
+  - Le directeur technique national **propose au directeur des sports ou au directeur régional de la jeunesse et des sports le contenu des lettres de mission de tous les conseillers techniques sportifs**, après avis du président de ligue pour ce qui concerne les CTR.
 
-Le recrutement d’un DTN se déroule en plusieurs étapes : un appel à candidature, la prise en compte de la sélection du président de la fédération sportive concernée, un passage en commission d’évaluation, la décision du ministre. Le DTN est nommé dans ses fonctions par le ministre des Sports après signature d’une lettre de mission entre le directeur des sports et le président de la fédération.
+Cet ensemble de règles fait du DTN le **garant de la cohérence entre la politique nationale fixée par le Ministre chargé des sports et la stratégie sportive de la fédération.**
+
+On le voit, le rôle du DTN est global et porte à la fois sur le développement de la pratique, sur le haut niveau, sur la formation, ainsi que sur le management des CTS. **Il ne saurait de dessaisir d’aucun de ces domaines d’intervention, même si, dans les fédérations les plus importantes, il peut s’appuyer sur des adjoints spécialisés dans l’un de ces domaines.**
+
+
+## Processus de recrutement
+
+Le recrutement d’un DTN se déroule en plusieurs étapes :
+
+  - Un appel à candidature
+  - La prise en compte par le ministère de la sélection du président de la fédération sportive concernée
+  - Un passage en commission d’évaluation
+  - La décision du ministre.
+
+Le DTN est **nommé dans ses fonctions par le ministre des Sports** après signature d’une lettre de mission entre le directeur des sports et le président de la fédération.
+
 
 ## Notre position
 
-S’agissant des fonctions de DTN, conformément aux procédures en vigueur et préalablement à la décision du ministre, un appel à candidature ainsi qu’un passage en commission d’évaluation seront réalisés afin de permettre à toutes les personnes désireuses d’occuper ces fonctions d’y prétendre. Aucune candidature ne peut se soustraire à cette procédure.
+S’agissant des fonctions de DTN, **conformément aux procédures en vigueur** et préalablement à la décision du ministre, un appel à candidature ainsi qu’un passage en commission d’évaluation seront réalisés afin de permettre à toutes les personnes désireuses d’occuper ces fonctions d’y prétendre. Aucune candidature ne peut se soustraire à cette procédure.
