--- a/_posts/2016-11-05-faq-dtn.md
+++ b/_posts/2016-11-05-faq-dtn.md
@@ -18,12 +18,12 @@ Les conditions de l’exercice de la mission de DTN sont prévues par les [artic
 
   - Le DTN est un **agent d’Etat, placé par le Ministre auprès d’une fédération sportive agréée, après avis du président de cette fédération**. Cette notion « d’agent d’Etat placé auprès » fonde la spécificité du modèle français d’organisation sportive et conserve toute sa pertinence.
   - La mission du DTN est de **concourir à la définition de la politique sportive fédérale**, de veiller à sa mise en œuvre et de contribuer à son évaluation. Le DTN dirige et anime la direction technique nationale de la fédération.
-  - Comme tous les conseillers techniques sportifs, le DTN exerce sa mission **dans les domaines du développement de la pratique sportive au sein des associations, de la détection des jeunes talents et du perfectionnement de l’élite, de la formation des cadres bénévoles et professionnels.**. Il est responsable notamment:
-    - De l’ensemble des équipes de France et de la politique sportive de haut niveau,
-    - De la formation et du perfectionnement des cadres,
-    - De la coordination des actions entre leur fédération et les fédérations sportives affinitaires, le sport scolaire et universitaire et le sport militaire,
-    - De la cohérence des projets sportifs de la fédération avec les orientations du ministère des sports,
-    - De la nomination des entraîneurs nationaux (EN), des cadres techniques nationaux (CTN) et régionaux (CTR).
+  - Comme tous les conseillers techniques sportifs, le DTN exerce sa mission **dans les domaines du développement de la pratique sportive au sein des associations, de la détection des jeunes talents et du perfectionnement de l’élite, de la formation des cadres bénévoles et professionnels.**. Il est responsable notamment :
+    - De l’ensemble des équipes de France et de la politique sportive de haut niveau
+    - De la formation et du perfectionnement des cadres
+    - De la coordination des actions entre leur fédération et les fédérations sportives affinitaires, le sport scolaire et universitaire et le sport militaire
+    - De la cohérence des projets sportifs de la fédération avec les orientations du ministère des sports
+    - De la nomination des entraîneurs nationaux (EN), des cadres techniques nationaux (CTN) et régionaux (CTR)
   - La **durée du mandat du DTN est de 4 ans**, celui-ci peut être renouvelé.
   - La lettre de mission du DTN est établie par le directeur des sports, après avis de l’intéressé, **sur la base des propositions du président de la fédération.**
   - Le directeur technique national **propose au directeur des sports ou au directeur régional de la jeunesse et des sports le contenu des lettres de mission de tous les conseillers techniques sportifs**, après avis du président de ligue pour ce qui concerne les CTR.
@@ -35,7 +35,7 @@ On le voit, le rôle du DTN est global et porte à la fois sur le développement
 
 ## Processus de recrutement
 
-Le recrutement d’un DTN se déroule en plusieurs étapes :
+Pour simplifier, le recrutement d’un DTN se déroule en plusieurs étapes :
 
   - Un appel à candidature
   - La prise en compte par le ministère de la sélection du président de la fédération sportive concernée
